--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,9 @@
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
+    "@react-native-firebase/app": "^14.9.4",
+    "@react-native-firebase/auth": "^14.9.4",
+    "@react-native-firebase/storage": "^14.9.4",
     "axios": "^0.26.1",
     "react": "17.0.2",
     "react-native": "0.68.1",
