--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^1.17.3",
     "@react-native-firebase/app": "^14.9.4",
     "@react-native-firebase/auth": "^14.9.4",
+    "@react-native-firebase/messaging": "^14.9.4",
     "@react-native-firebase/storage": "^14.9.4",
     "@react-native-masked-view/masked-view": "^0.2.6",
     "@react-navigation/bottom-tabs": "^6.3.1",
@@ -25,6 +26,7 @@
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.4.0",
     "react-native-image-crop-picker": "^0.37.3",
+    "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
     "react-native-toast-message": "^2.1.5",
