--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
+    "node-cron": "^3.0.0",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.15",
     "sequelize": "^6.19.0",
